# boat-edit-to-github

./: README.md  boat-edit-to-github.yaml  pyproject.toml  test_a.py
.github/workflows/: main.yml
boat_edit_to_github/: lambda_function.py
